--- a/backend/garyshop/templates/base.html
+++ b/backend/garyshop/templates/base.html
@@ -10,7 +10,18 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="admin/">Admin</a>
             </li>
-          </ul>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="register/">Register</a>
+            </li>
+
+            <li class="nav-item">
+              {% if user.is_authenticated %}
+                <a class="nav-link active" aria-current="page" href='logout/'>Logout</a>
+              {% else %}
+                <a class="nav-link active" aria-current="page" href='login/'>Login</a>
+              {% endif %}
+            </li>
+        </ul>
         {% block content %}
         {% endblock %}
     </body>
