End of Week 4, added basket and order functions, some css styling

--- a/backend/garyshop/templates/index.html
+++ b/backend/garyshop/templates/index.html
@@ -5,7 +5,7 @@
 {% block content %}
     <h1>&emsp; Hello to our wonderful Telletubby Trading Card Customers</h1>
     <br>
-    <div style="float:left; margin-left: 5%;">
+    <div style="float:left; margin-left: 5%; margin-top: 2%;">
         <h3>Welcome everyone to Spoingus' Emporium</h3>
         <p>We first shall begin with a word from our sponsor:</p>
         <i style="justify-content: left;">
@@ -24,7 +24,7 @@
             what humans think is impossible.
         </i>
     </div>
-    <div style="float:right; margin-right: 5%;">
+    <div style="float:right; margin-right: 5%; margin-top: 2%;">
         <ul>
             {% for p in products%}
             <li> {{p.name}} - €{{p.price}} - {{p.description}} </li>
