--- a/backend/garyshop/templates/base.html
+++ b/backend/garyshop/templates/base.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="../static/style.css" />
+
 <html>
     <head>
         <title>{% block title %}{% endblock %}</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/admin/">Admin</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/register/">Register</a>
+          </li>
+          {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="/basket">Shopping Basket</a>
+            </li>
+          {% endif %}
+          <li class="nav-item">
+            {% if user.is_authenticated %}
+              <a class="nav-link active" aria-current="page" href='/logout/'>Logout</a>
+            {% else %}
+              <a class="nav-link active" aria-current="page" href='/login/'>Login</a>
+            {% endif %}
+          </li>
+      </ul>
     </head>
     <body>
-        <ul class="nav justify-content-end">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="admin/">Admin</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="register/">Register</a>
-            </li>
-
-            <li class="nav-item">
-              {% if user.is_authenticated %}
-                <a class="nav-link active" aria-current="page" href='logout/'>Logout</a>
-              {% else %}
-                <a class="nav-link active" aria-current="page" href='login/'>Login</a>
-              {% endif %}
-            </li>
-        </ul>
         {% block content %}
         {% endblock %}
     </body>
