--- a/backend/garyshop/static/style.css
+++ b/backend/garyshop/static/style.css
@@ -1,7 +1,12 @@
 html {
   background-image: linear-gradient(140deg, #EADEDB 0%, #BC70A4 50%, #BFD641 75%);
   background-size: cover;
+  min-height: 100%;
 }
 body {
   background-image: linear-gradient(aqua, #BC70A4);
+}
+.nav-link{
+  color:green;
+  font-size: 20px;
 }
