--- a/backend/garyshop/templates/base.html
+++ b/backend/garyshop/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="icon" href="/media/spoing.jfif">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="../static/style.css" />
@@ -6,6 +7,7 @@
 <html>
     <head>
         <title>{% block title %}{% endblock %}</title>
+        <a href="/" role="button" class="btn btn-outline-success btn-lg" style="float:left;margin-left:1%;margin-top:1%;">Home</a>
         <ul class="nav justify-content-end">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/admin/">Admin</a>
@@ -25,6 +27,7 @@
               <a class="nav-link active" aria-current="page" href='/login/'>Login</a>
             {% endif %}
           </li>
+          <br><br><br>
       </ul>
     </head>
     <body>
