Finished Lab 5, All is styled

--- a/backend/garyshop/templates/base.html
+++ b/backend/garyshop/templates/base.html
@@ -19,6 +19,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/basket">Shopping Basket</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/orderhistory">Order History</a>
+            </li>
           {% endif %}
           <li class="nav-item">
             {% if user.is_authenticated %}
