--- a/backend/garyshop/templates/basket.html
+++ b/backend/garyshop/templates/basket.html
@@ -26,6 +26,8 @@
     </table>   
     <br>
     <a href="/order" class="btn btn-primary" style="margin-left: 2%;margin-bottom:2%;"> Order </a>
-    <br> 
+    <br>
+    <br><br><br><br><br><br><br><br>
+    <h1 style="color: transparent;" >congrats u found easter egg, now ignore it</h1>
 {% endif %}
 {% endblock %}
