--- a/backend/garyshop/templates/index.html
+++ b/backend/garyshop/templates/index.html
@@ -23,6 +23,11 @@
             because bees don't care
             what humans think is impossible.
         </i>
+        <br><br><br>
+        <h3><u>Reviews</u></h3>
+        <i>Everyone when they see this site:</i>
+        <br>
+        <img src="/media/ohmy.gif">
     </div>
     <div style="float:right; margin-right: 5%; margin-top: 2%;">
         <ul>
