--- a/backend/garyshop/templates/orderform.html
+++ b/backend/garyshop/templates/orderform.html
@@ -29,5 +29,6 @@
     {{form.as_table}}
     <button type="submit">Order</button>
 </form>
-
+<br><br><br><br><br>
+<h1 style="color: transparent;" >congrats u found easter egg, now ignore it</h1>
 {% endblock %}
