--- a/backend/garyshop/templates/previous_orders.html
+++ b/backend/garyshop/templates/previous_orders.html
@@ -23,4 +23,6 @@
         {% endfor %}
     </tbody>
 </table>
+<br><br><br><br>
+<h1 style="color: transparent;" >congrats u found easter egg, now ignore it</h1>
 {% endblock %}
