--- a/backend/frontend/views/index.ejs
+++ b/backend/frontend/views/index.ejs
@@ -1,52 +1,31 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title><%= title %></title>
-        <link rel='stylesheet' href='/stylesheets/style.css' />
-    </head>
-    <body>
+<%- include('header') -%>
         <h1><%= title %></h1>
         <p>Welcome to <%= title %></p>
-        <a id="auth-link" href='/login'>Login</a>
         <h3>Products:</h3>
         <ul id="product-list">
 
         </ul>
         <script>
-            window.userLoggedIn = false;
-
-            function isLoggedIn(){
-                let accessToken = localStorage.getItem("accessToken");
-                if(accessToken != null || typeof(accessToken) != "undefined"){
-                    window.userLoggedIn = true;
-                }
-
-                if(window.userLoggedIn){
-                    let loginLink = document.getElementById("auth-link");
-                    loginLink.innerHTML = "Logout";
-                    loginLink.href = "#";
-                }
-            }
-            
-            document.body.onLoad = isLoggedIn();
-
-            let list = document.getElementById("product-list");
-            let req = "http://127.0.0.1:8000/api/products/"
-            fetch(req) // make a request to this endpoint
-				.then(response => response.json()) // with our response, get the json data returned
-                .then(data => data.forEach(element => {
-                console.log(element)
-                let productname = element.name
-                let newListelement = document.createElement("li")// create an li element 
-                let link = document.createElement("a")
-                link.innerHTML = element['name']
-
-                let productStr = "/products?id=" + element['id']
-                link.href = productStr
-                
-                newListelement.innerHTML = productname
-                list.appendChild(link);
-            }));
+            fetch("http://127.0.0.1:8000/api/products")
+            .then(resp => resp.json())
+            .then(data => {
+                data.forEach(element => {
+                    // create a li element for each 
+                    console.log(element);
+                    let tmpLi = document.createElement("li");
+                    let link = document.createElement("a");
+                    link.innerHTML = element['name']; // <a>Bread</a>
+                    // /products?id=x
+                    let productStr = "/productindividual?id=" + element['id'];
+                    tmpLi.appendChild(link);
+                    console.log(productStr);
+                    link.href = productStr;
+                    document.getElementById("product-list").appendChild(tmpLi)
+                });
+            })
+        
+        window.onload = function(){
+            isLoggedIn(); // when the page loads call isLoggedIn
+        }
         </script>
-    </body>
-</html>
+<%- include('footer') -%>
