--- a/backend/frontend/views/login.ejs
+++ b/backend/frontend/views/login.ejs
@@ -1,15 +1,15 @@
-<html>
-    <head>
-		<title>Login Page</title>
-    </head>
-    <body>
+<%- include('header') -%>
         <h1>Login</h1>
         <form id="login-form">
-            <label for="username-input">Username</label>
-            <input type="text" name="username-input" id="username" placeholder="Your username" required>
-            <label for="password-input">Password</label>
-            <input type="password" id="password" name="password-input" placeholder="Your password" required>
-            <button type="submit">Login</button>
+            <div id="wrapper" class="alert alert-primary dismissible">
+                <label for="username-input">Username</label>
+                <input type="text" name="username-input" id="username" placeholder="Your username" required>
+                <label for="password-input">Password</label>
+                <input type="password" id="password" name="password-input" placeholder="Your password" required>
+                <br>
+                <button type="submit">Login</button>
+            </div>
+            <h4 style="color:red;" id="incorrect"></h3>
         </form>
         <script>
 
@@ -40,13 +40,19 @@
                             window.location.href = "/"; // the "/" is the homepage for node http://127.0.0.1:3000
                         }
                         else{
-                            alert("username or password invalid")
+                            let warning = document.getElementById("wrapper");
+                            warning.classList.remove('alert-primary')
+                            warning.classList.add('alert-danger')
+                            document.getElementById("incorrect").innerHTML = "Username or Password Invalid, Please try again"
                         }
                     });   
             }
         }
         let myform = document.getElementById("login-form"); // get the form 
-        myform.addEventListener('submit', formValidator); // bind the validator function to the submit button for the form               
+        myform.addEventListener('submit', formValidator); // bind the validator function to the submit button for the form     
+        
+        window.onload = function(){
+            isLoggedIn(); // when the page loads call isLoggedIn
+        }
 		</script>
-    </body>
-</html>
+<%- include('footer') -%>
