--- a/backend/frontend/views/header.ejs
+++ b/backend/frontend/views/header.ejs
@@ -8,8 +8,25 @@
         <link rel='stylesheet' href='stylesheets/style.css' />
 
         <title> Spoingus' Paper Emporium</title>
-        <a id="auth-link" href='/login' style="float: right;">Login</a>
+        <nav class="border fixed split-nav">
+            <div class="nav-brand">
+              <h3><a href="/">Spoingus' Emporium</a></h3>
+            </div>
+            <div class="collapsible">
+              <input id="collapsible1" type="checkbox" name="collapsible1">
+              <label for="collapsible1">
+                <div class="bar1">Hello</div>
+              </label>
+              <div class="collapsible-body">
+                <ul class="inline">
+                  <li><a href='/basket'>Basket</a></li>
+                  <li><a href='/register'>Register</a></li>
+                  <li><a id="auth-link" href='/login'>Login</a></li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </head>
     <body>
-        <div class="paper container">
+        <div style="margin-top: 5%;" class="paper container">
 		<!-- code to show the navbar goes here -->
