--- a/backend/frontend/views/register.ejs
+++ b/backend/frontend/views/register.ejs
@@ -1,9 +1,112 @@
 <%- include('header') -%>
-
-<!-- html and <script> tags specific to a page go here -->
-
+    <form id="register-form">
+        <h4 style="color:red;" id="incorrect"></h4>
+        <h4 style="color:green;" id="correct"></h4>
+        <div id="wrapper" class="alert alert-primary" style="margin-left: 10%; width: 30%; display: inline-block;">
+            <label for="username-input">Username</label>
+            <input type="text" name="username-input" id="username" placeholder="Your username" required>
+            <br>
+            <label for="password-input">Password</label>
+            <input type="password" id="password" name="password-input" placeholder="Your password" required>
+            <br>
+            <label for="email-input">Email</label>
+            <input type="text" id="email" name="email-input" placeholder="Your email" required>
+            <br>
+            <button type="submit">Submit</button>
+        </div>
+    
+        <div style="margin-left:10%; width: 50%; float: right;">
+            <img src="images/stickman.png" style="width: 75%;"></img>
+        </div>
+    </form>
 
     <script>
+        function formValidator(event){
+            event.preventDefault(); // always prevent default events when using javascript
+
+            let username = document.getElementById("username").value; 
+            let password = document.getElementById("password").value;
+            let email = document.getElementById("email").value;
+
+            if( username == ""){
+                alert("Username cannot be null");
+            }
+            else if (password == ""){
+                alert("Password cannot be null");
+            }
+            else if (email ==""){
+                alert("Email cannot be null")
+            }
+            else{
+                fetch("http://127.0.0.1:8000/apiregister/", { 
+                    method: 'POST', headers: { 'Accept': 'application/json', 'Content-Type': 'application/json'},
+                    body: JSON.stringify({username: username, password: password, email: email})
+                    }).then(response=>response.json())
+                    .then(data=>{
+                        console.log(data);
+                        if('username' in data && 'email' in data){
+                            let warning = document.getElementById("wrapper");
+                            warning.classList.remove('alert-primary')
+                            warning.classList.add('alert-success')
+                            document.getElementById("correct").innerHTML = "Details Accepted, Logging you in"
+                            LogIn(username, password);
+                            window.setTimeout(() => {window.location.href = "/";}, 3000);
+                        }
+                        else if('username' in data){
+                            let warning = document.getElementById("wrapper");
+                            warning.classList.remove('alert-primary')
+                            warning.classList.add('alert-danger')
+                            document.getElementById("incorrect").innerHTML = "Bad Username, try again"
+                            window.setTimeout(clearWarning, 2000);
+                        }
+                        else if('email' in data){
+                            setWarning()                            
+                            document.getElementById("incorrect").innerHTML = "Bad Email, try again"
+                            window.setTimeout( clearWarning, 2000);
+                        }
+                    });   
+            }
+        }
+        let myform = document.getElementById("register-form"); // get the form 
+        myform.addEventListener('submit', formValidator); // bind the validator function to the submit button for the form     
+        function setWarning()
+        {
+            let warning = document.getElementById("wrapper");
+            warning.classList.remove('alert-primary')
+            warning.classList.add('alert-danger')
+        }
+
+        function clearWarning()
+        {
+            let warning = document.getElementById("wrapper");
+            warning.classList.remove('alert-danger')
+            warning.classList.add('alert-primary')
+            document.getElementById("incorrect").innerHTML = ""
+
+        }
+
+        function LogIn(username, password)
+        {
+            fetch("http://127.0.0.1:8000/api/token/", { 
+                    method: 'POST', headers: { 'Accept': 'application/json', 'Content-Type': 'application/json'},
+                    body: JSON.stringify({username: username, password: password})
+                    }).then(response=>response.json())
+                    .then(data=>{
+                        console.log(data);
+                        if('access' in data){
+                            let accessToken = data['access'];
+                            let refreshToken = data['refresh'];
+                            localStorage.setItem("access", accessToken);
+                            localStorage.setItem("refresh", refreshToken);
+                        }
+                        else{
+                            let warning = document.getElementById("wrapper");
+                            warning.classList.remove('alert-primary')
+                            warning.classList.add('alert-danger')
+                            document.getElementById("incorrect").innerHTML = "Username or Password Invalid, Please try again"
+                        }
+                    });
+        }
         window.onload = function(){
             isLoggedIn(); // when the page loads call isLoggedIn
         }
