--- a/backend/frontend/views/header.ejs
+++ b/backend/frontend/views/header.ejs
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32">
         <link rel='stylesheet' href='stylesheets/paper.css' />
         <link rel='stylesheet' href='stylesheets/style.css' />
 
@@ -21,6 +22,7 @@
                 <ul class="inline">
                   <li><a href='/basket'>Basket</a></li>
                   <li><a href='/register'>Register</a></li>
+                  <li><a href='/prev_orders'>Order History</a></li>
                   <li><a id="auth-link" href='/login'>Login</a></li>
                 </ul>
               </div>
