Home Page Styling

--- a/backend/frontend/public/stylesheets/style.css
+++ b/backend/frontend/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
   padding: 50px;
 }
-a {
-  text-decoration: none;
+html {
+  background-image: url("/images/background.jpg");
+  background-size: cover;
 }
